# spider_network_blocker

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
benches/: benchmarks.rs
src/: adblock.rs  dynamic_blocklist.rs  intercept_manager.rs  lib.rs  scripts.rs  trie.rs  xhr.rs
tests/: integration.rs
url_patterns/domains/amazon.com/xhr/: pattern1.txt
