[package]
name = "spider_network_blocker"
version = "0.0.84"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "Web crawler network blocking urls and patterns."
repository = "https://github.com/spider-rs/spider_network_blocker"
readme = "README.md"
keywords = ["network", "firewall"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider_network_blocker"
edition = "2021"

[dependencies]
hashbrown = { version = "0.17", optional = true }
arc-swap = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
phf = { version = "0.13", features = ["macros"] }
adblock = { version = "0.12", optional = true, default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }

[build-dependencies]
phf = { version = "0.13", default-features = false }
phf_codegen = "0.13"
convert_case = "0.11"
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = ["hashbrown"]
hashbrown = ["dep:hashbrown"]
adblock = ["dep:adblock"]
adblock_easylist = ["adblock", "dep:native-tls"]

[[bench]]
name = "benchmarks"
harness = false